  asciidoc rather than requiring a system-wide installation.
- Crash with some notification servers when the server is quitting.
- Crash when using QtWebKit with PAC and the file has an invalid encoding.
- Crash with the "tiramisu" notification server.
- Crash when the "herbe" notification presenter doesn't start correctly.

[[v2.5.4]]
v2.5.4 (2023-03-13)
-------------------

Fixed
~~~~~

- Support SQLite with DQS (double quoted string) compile time option turned
  off.

[[v2.5.3]]
v2.5.3 (2023-02-17)
-------------------

Added
~~~~~

- New `array_at` quirk, polyfilling the
  https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/at[`Array.at` method],
  which is needed by various websites, but only natively available with Qt 6.2.

Fixed
~~~~~

- Crash when the adblock filter file can't be read.
- Inconsistent behavior when using `:config-{dict,list}-*` commands with an
  invalid value. Before the fix, using the same command again would complain that
  the value was already present, despite the error and the value not being
  actually changed.
- Incomplete error handling when mutating a dict/list in `config.py` and setting
  an invalid value. Before the fix, this would result in either a message in the
  terminal rather than GUI (startup), or in a crash (`:config-source`).
- Wrong type handling when using `:config-{dict,list}-*` commands with a config
  option with non-string values. The only affected option is `bindings.commands`,
  which is probably rarely used with those commands.
- The `readability` userscript now correctly passes the source URL to
  Breadability, to make relative links work.
- Update `dictcli.py` to use the `main` branch, fixing a 404 error.
- Crash with some notification servers when the server did quit.
- Minor documentation fixes

[[v2.5.2]]
v2.5.2 (2022-06-22)
-------------------

Fixed
~~~~~

- Packaging-related fixes:
    * The `install` and `stacktrace` help pages are now included in the docs